breadcrumb , games information page

--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -254,16 +254,14 @@ body img{
 						</p>
 					</div>
 				</div>
-				<ul class="Realbreadcrumb">
-
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >All Games</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'Fav' %}" >Favourite Games</a></li>
-
-				  </ul>
 
 			</div>
 		</div>
 	</div>
+		<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'Fav' %}">Favourite Games</a></li>
+				</ul>
 	<!-- end breadcrumb section -->
 
 	<!-- games -->
