--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -167,17 +167,15 @@ body img{
 						</p>
 					</div>
 				</div>
-					<ul class="Realbreadcrumb">
 
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >All Games</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'History' %}" >Downloaded Games</a></li>
-
-				  </ul>
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
-
+<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Downloaded Games</a></li>
+				</ul>
 	<!-- games -->
 	<div class="product-section mt-150 mb-150" style="height:70%">
 		<div class="container">
