--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -154,15 +154,15 @@ body img{
 						</p>
 					</div>
 				</div>
-				<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'contact' %}">Contact Us</a></li>
-				</ul>
+
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
-
+	<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'contact' %}">Contact Us</a></li>
+				</ul>
 	<!-- contact form -->
 	<div class="contact-from-section mt-150 mb-150">
 		<div class="container">
