--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -410,16 +410,18 @@ body img{
 						</p>
                         </div>
                     </div>
-					<ul class="Realbreadcrumb">
-						<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
-						<li class="breadcrumb-item current"><a href="{% url 'profile' %}">Profile</a></li>
-					  </ul>                </div>
+
+				</div>
             </div>
         </div>
         <!-- end breadcrumb section -->
 
 
-<br>
+<ul class="Realbreadcrumb">
+						<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+						<li class="breadcrumb-item current"><a href="{% url 'profile' %}">Profile</a></li>
+					  </ul>
+		<!--profile-->
 
 
 <div class="profile-sec">
