--- a/FrontEnd/static/css/main.css
+++ b/FrontEnd/static/css/main.css
@@ -503,6 +503,8 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
   position: relative;
   z-index: 1;
   background-attachment: fixed;
+
+box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .breadcrumb-section:after {
@@ -2730,11 +2732,13 @@ table.order-details tbody td {
 
 .Realbreadcrumb{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   position: relative;
-  left: -150px;
-  top: 84px;
+  margin-left: -1%;
+  margin-top:1%;
+
+
 }
 
   .Realbreadcrumb .current a {
