--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -59,6 +59,12 @@
 		}
 		.col-md-7{
 		padding-left:5%;}
+					.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
 
 
 
@@ -157,24 +163,24 @@
 						</p>
 					</div>
 				</div>
-				<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
-					<li class="breadcrumb-item"><a href="{% url 'signup' %}" >Sign Up</a></li>
-					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'game_info_page' game_id=game_id %}">Game Information</a></li>
-				 </ul>
+
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
+	<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
 
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'game_info_page' game_id=game_id %}">Game Information</a></li>
+				 </ul>
 	<!-- single product -->
 	<div class="single-product mt-150 mb-150">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-5">
     <div class="single-product-img">
-        <img src="" id="gameImageINFO">
+        <img src="" id="gameImageINFO" style="box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;">
     </div>
 </div>
 				<div class="col-md-7">
@@ -190,6 +196,9 @@
 							<p class="rDate"></p>
 							<p class="Developer"></p>
 							<p class="rateC"></p>
+							<p class="age"></p>
+							<p class="price"></p>
+							<p class="purch"></p>
 
 							<a href="#" class="cart-btn" id="favBtn"><i class="fas fa-regular fa-heart"></i> <span id="favText">Add to Favourite Games</span></a>
 							<a href="javascript:void(0); " class="cart-btn download" id="copyBtn"><i class="fas fa-solid fa-link "></i><span id="copyText">Go to The Download Page!</span></a>
@@ -480,6 +489,12 @@ document.addEventListener('DOMContentLoaded', function () {
         document.querySelector('.Lang').innerHTML = '<strong>Languages:</strong> ' + gameData.Languages;
         document.querySelector('.rDate').innerHTML = '<strong>Release Date:</strong> ' + gameData.Original_Release_Date;
         document.querySelector('.Developer').innerHTML = '<strong>Developer:</strong> ' + gameData.Developer;
+        document.querySelector('.age').innerHTML = '<strong>Age Rating:</strong> ' + gameData.Age_Rating+'.';
+        document.querySelector('.price').innerHTML = '<strong>Price:</strong> ' + gameData.Price+'.';
+        document.querySelector('.purch').innerHTML = '<strong>In app Purchases:</strong> ' + gameData.In_app_Purchases+'.';
+
+
+
 
         // Update the rating element
         var ratingElement = document.querySelector('.rateC');
