--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -185,15 +185,15 @@ body img{
 						</p>
 					</div>
 				</div>
-				<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'about' %}">About Us</a></li>
-				  </ul>
+
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
-
+	<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'about' %}">About Us</a></li>
+				</ul>
 	<!-- featured section -->
 	<div class="feature-bg">
 		<div class="container">
