--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -81,6 +81,7 @@
 				return false;
 			} else {
 				divCP.style.paddingTop = '0';
+				messageEmail.style.top = '36%';
 				messageSpan.style.visibility = 'hidden';
 			}
 	
