Sign up , log-in

--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -195,9 +195,9 @@ body img{
   background-color: #fff;
   max-width: 600px;
   margin: 15% auto;
-  padding: 10px;
+  padding: 1%;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   position: relative;
 }
@@ -231,6 +231,7 @@ body img{
 
 #resetPassword:hover , #setNewPassword:hover {
   background-color: #ff069a;
+
 }
 
 .Success .popup-content{
@@ -320,7 +321,7 @@ body img{
 				<div class="containeTitle" style="margin-left: 200px;">
 					<div class="rowTitle">
 								  <div class="col-md-12 text-center">
-									<h3 class="animate-charcter" style="font-size: 40px;">Log In</h3>
+									<h3 class="animate-charcter" style="font-size: 50px;">Log In</h3>
 								  </div>
 								</div>
 							  </div>
@@ -341,7 +342,7 @@ body img{
 										</span>
 										<label for="password">Password:</label>
 										<input type="password" id="pass" class="input-box" name="Password" required placeholder="Enter your password">
-										<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: absolute; right: 129px; top: 188px; cursor: pointer;"></i>
+										<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: absolute; right: 129px; top: 198px; cursor: pointer;"></i>
 										<a href="#" id="forgetPass">Forgot Password?</a>
 										<br><br>
 									</div>
