--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -59,6 +59,9 @@
 		.hero-btns .boxed-btn{
 		width:30%;
 		}
+
+
+
 		.subtitle h1{
 		margin:auto;}
 
@@ -91,6 +94,13 @@
   }
 }
 
+				.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+
 /* Media query for smaller screens */
 @media (max-width: 900px) {
     .site-logo img {
@@ -115,11 +125,8 @@
 
 
     }
-
-
-
-    /* Other adjustments as needed */
 }
+
 	</style>
 
 </head>
