--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -180,11 +180,20 @@
     height: 100%;
     padding: var(--border-width);
     border-radius: var(--border-radius);
-    background-image: conic-gradient(
-        #c5c5c5,
-        #ff069a,
-        aqua
-    );
+    background-image: -webkit-conic-gradient(#c5c5c5, #ff069a, aqua);
+background-image: conic-gradient(#c5c5c5, #ff069a, aqua);
+mask-image: var(--m-i), var(--m-i);
+-webkit-mask-image: var(--m-i), var(--m-i);
+mask-origin: var(--m-o);
+-webkit-mask-origin: var(--m-o);
+mask-clip: var(--m-o);
+-webkit-mask-clip: var(--m-o);
+mask-composite: exclude;
+-webkit-mask-composite: exclude;
+    -webkit-mask-composite: destination-out;
+    filter: hue-rotate(0);
+    animation: hue linear 500ms infinite;
+    animation-play-state: paused;
     mask-image: var(--m-i), var(--m-i);
     mask-origin: var(--m-o);
     mask-clip: var(--m-o);
